--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "private": true,
   "homepage": "https://podletsky.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "notiflix": "^3.2.6",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
