--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "hooks": "^0.3.2",
+    "modern-normalize": "^2.0.0",
     "notiflix": "^3.2.6",
     "react": "^18.1.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
